# qvac-sdk

./: README.md  pyproject.toml
src/qvac_sdk/: __init__.py  client.py  config.py  models.py  openai_compat.py
tests/: test_client.py  test_models.py
