[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qvac-sdk"
version = "0.1.0"
description = "Python SDK for Tether QVAC — local-first AI inference on any device"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "Kinance", email = "kinance@gmail.com" },
]
keywords = ["qvac", "tether", "ai", "inference", "local-ai", "edge-ai", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/kinance/qvac-sdk"
Documentation = "https://github.com/kinance/qvac-sdk#readme"
Repository = "https://github.com/kinance/qvac-sdk"
Issues = "https://github.com/kinance/qvac-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/qvac_sdk"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.9"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
